--- a/src/lean.mk.in
+++ b/src/lean.mk.in
@@ -27,15 +27,11 @@ LEANC_OPTS = -O3 -DNDEBUG
 LINK_OPTS =
 
 # ignore error messages from missing parts, e.g. Leanc/
-SRCS = $(shell find $(PKG) $(PKG).lean -name '*.lean' 2> /dev/null)
-DEPS = $(addprefix $(TEMP_OUT)/,$(SRCS:.lean=.depend))
+SRCS = $(shell find $(PKG) $(PKG).lean $(EXTRA_SRC_ROOTS) -name '*.lean' 2> /dev/null)
+DEPS = $(subst /lake/,/,$(addprefix $(TEMP_OUT)/,$(SRCS:.lean=.depend)))
 export LEAN_PATH += @LEAN_PATH_SEPARATOR@$(OLEAN_OUT)
-OBJS = $(addprefix $(OLEAN_OUT)/, $(SRCS:.lean=.olean))
-ifdef C_ONLY
-REL_OS = $(patsubst %.c,%.o,$(shell cd $(C_OUT); find $(PKG) $(PKG).c -name '*.c' 2> /dev/null))
-else
-REL_OS = $(SRCS:.lean=.o)
-endif
+OBJS = $(subst /lake/,/,$(addprefix $(OLEAN_OUT)/, $(SRCS:.lean=.olean)))
+REL_OS = $(patsubst %.lean,%.o,$(shell find $(PKG) $(PKG).lean -name '*.lean' 2> /dev/null))
 
 SHELL = /usr/bin/env bash -euo pipefail
 
@@ -43,7 +39,7 @@ SHELL = /usr/bin/env bash -euo pipefail
 # Disable all default make rules
 .SUFFIXES:
 
-all: $(OBJS)
+objs: $(OBJS)
 
 bin: $(BIN_OUT)/$(BIN_NAME)
 
@@ -56,25 +52,28 @@ $(OLEAN_OUT)/$(PKG) $(LIB_OUT) $(BIN_OUT):
 
 # Make sure the .olean output directory exists so that `lean --deps` knows where this package's
 # .olean files will be located even before any of them are actually built.
-$(TEMP_OUT)/%.depend: %.lean | $(OLEAN_OUT)/$(PKG)
+.SECONDEXPANSION:
+$(TEMP_OUT)/%.depend: $$(subst ./Lake,./lake/Lake,./%.lean) | $(OLEAN_OUT)/$(PKG)
 	@mkdir -p "$(TEMP_OUT)/$(*D)"
 # convert path separators and newlines on Windows
 	deps=`$(LEAN) --deps $<` || (echo "$(LEAN) --deps $< failed ($$?): $$deps"; exit 1); \
   deps=`echo "$$deps" | tr '\\\\' / | tr -d '\\r'`; \
-  echo $(OLEAN_OUT)/$(<:.lean=.olean): $$deps > $@
+  echo $(OLEAN_OUT)/$*.olean: $$deps > $@
 
-$(OLEAN_OUT)/%.olean: %.lean $(TEMP_OUT)/%.depend $(MORE_DEPS)
+.SECONDEXPANSION:
+$(OLEAN_OUT)/%.olean: $$(subst ./Lake,./lake/Lake,./%.lean) $(TEMP_OUT)/%.depend $(MORE_DEPS)
 ifdef CMAKE_LIKE_OUTPUT
 	@echo "[    ] Building $<"
 endif
 	@mkdir -p $(OLEAN_OUT)/$(*D)
-ifndef LLVM
-	$(LEAN) $(LEAN_OPTS) -o "$@" -i "$(OLEAN_OUT)/$*.ilean" --c="$(TEMP_OUT)/$*.c.tmp" $<
+	set -x; \
+	LEAN_OPTS="$(LEAN_OPTS)"; \
+	[[ -z "$(LLVM)" ]] || LEAN_OPTS+=" --bc=$(TEMP_OUT)/$*.bc.tmp"; \
+	[[ "$<" != lake/* ]] || LEAN_OPTS+=" --root=lake"; \
+	$(LEAN) $$LEAN_OPTS -o "$@" -i "$(OLEAN_OUT)/$*.ilean" --c="$(TEMP_OUT)/$*.c.tmp" "$<"
 # create the .c file atomically
 	@mv "$(TEMP_OUT)/$*.c.tmp" "$(C_OUT)/$*.c"
-else
-	$(LEAN) $(LEAN_OPTS) -o "$@" -i "$(OLEAN_OUT)/$*.ilean" --c="$(TEMP_OUT)/$*.c.tmp" --bc="$(TEMP_OUT)/$*.bc.tmp" $<
-	@mv "$(TEMP_OUT)/$*.c.tmp" "$(C_OUT)/$*.c"
+ifdef LLVM
 	@mv "$(TEMP_OUT)/$*.bc.tmp" "$(BC_OUT)/$*.bc"
 endif
 
