--- a/tests/bench/speedcenter.exec.velcom.yaml
+++ b/tests/bench/speedcenter.exec.velcom.yaml
@@ -12,8 +12,9 @@
     <<: *time
     cmd: |
       bash -c 'set -eo pipefail; touch ../../src/Init/Prelude.lean; make LEAN_OPTS="-Dprofiler=true -Dprofiler.threshold=9999" -C ${BUILD:-../../build/release}/stage2 --output-sync -j$(nproc) 2>&1 | ./accumulate_profile.py'
+      false
     max_runs: 2
-    parse_output: true
+    #parse_output: true
   # initialize stage2 cmake + warmup
   build_config:
     cmd: |
