Conclusion is not free form

--- a/.github/workflows/pr-release.yml
+++ b/.github/workflows/pr-release.yml
@@ -79,12 +79,11 @@ jobs:
               repo: context.repo.repo,
               head_sha: "${{ steps.workflow-info.outputs.sourceHeadSha }}",
               name: "PR release",
-              status: "completed",
-              conclusion: "toolchain ${{ github.repository_owner }}/lean4-pr-releases:pr-release-${{ steps.workflow-info.outputs.pullRequestNumber }}",
+              conclusion: "success",
               // details_url: process.env.parameter_url,
               output: {
                 title: "PR release",
-                summary: "PR toolchain successfully created/update\nUse toolchain `${{ github.repository_owner }}/lean4-pr-releases:pr-release-${{ steps.workflow-info.outputs.pullRequestNumber }}`",
+                summary: "PR toolchain successfully created or updated.\nUse toolchain `${{ github.repository_owner }}/lean4-pr-releases:pr-release-${{ steps.workflow-info.outputs.pullRequestNumber }}`",
                 // text: "my text",
               },
             });
