--- a/.github/workflows/nix-ci.yml
+++ b/.github/workflows/nix-ci.yml
@@ -86,7 +86,7 @@ jobs:
       - name: Build manual
         run: |
           nix build $NIX_BUILD_ARGS --update-input lean --no-write-lock-file ./doc#{lean-mdbook,leanInk,alectryon,test,inked} -o push-doc
-          nix build NIX_BUILD_ARGS --update-input lean --no-write-lock-file ./doc
+          nix build $NIX_BUILD_ARGS --update-input lean --no-write-lock-file ./doc
           # https://github.com/netlify/cli/issues/1809
           cp --dereference ./result ./dist
         if: matrix.name == 'Nix Linux'
