--- a/.github/workflows/actionlint.yml
+++ b/.github/workflows/actionlint.yml
@@ -16,3 +16,5 @@ jobs:
     steps:
     - name: actionlint
       uses: raven-actions/actionlint@v1
+      with:
+        pyflakes: false # we do not use python scripts
