--- a/.github/workflows/pr-release.yml
+++ b/.github/workflows/pr-release.yml
@@ -325,7 +325,7 @@ jobs:
             git checkout -b lean-pr-testing-${{ steps.workflow-info.outputs.pullRequestNumber }}
             echo "leanprover/lean4-pr-releases:pr-release-${{ steps.workflow-info.outputs.pullRequestNumber }}" > lean-toolchain
             git add lean-toolchain
-            sed -i 's/require std from git "https:\/\/github.com\/leanprover\/std4" @ ".\+"/require std from git "https:\/\/github.com\/leanprover\/std4" @ "nightly-testing-${MOST_RECENT_NIGHTLY}"/' lakefile.lean
+            sed -i "s/require std from git \"https:\/\/github.com\/leanprover\/std4\" @ \".\+\"/require std from git \"https:\/\/github.com\/leanprover\/std4\" @ \"nightly-testing-${MOST_RECENT_NIGHTLY}\"/" lakefile.lean
             git add lakefile.lean
             git commit -m "Update lean-toolchain for testing https://github.com/leanprover/lean4/pull/${{ steps.workflow-info.outputs.pullRequestNumber }}"
           else
