--- a/src/stdlib.make.in
+++ b/src/stdlib.make.in
@@ -4,6 +4,8 @@
 LEAN_BASH ?= /usr/bin/env bash
 SHELL := $(LEAN_BASH) -eo pipefail
 
+LEAN ?= "${PREV_STAGE}/bin/lean${PREV_STAGE_CMAKE_EXECUTABLE_SUFFIX}"
+
 # any absolute path to the stdlib breaks the Makefile
 export LEAN_PATH=
 export LEAN_CC=${CMAKE_C_COMPILER_LAUNCHER} ${CMAKE_C_COMPILER}
@@ -12,7 +14,6 @@ export LEAN_ABORT_ON_PANIC=1
 # LEAN_OPTS: don't use native code (except for primitives) since it is from the previous stage
 # MORE_DEPS: rebuild the stdlib whenever the compiler has changed
 LEANMAKE_OPTS=\
-	LEAN="${PREV_STAGE}/bin/lean${PREV_STAGE_CMAKE_EXECUTABLE_SUFFIX}"\
 	LEANC="${CMAKE_BINARY_DIR}/leanc.sh"\
 	OUT="${LIB}"\
 	LIB_OUT="${LIB}/lean"\
